Add Unit testing - update sdk for Java